--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,11 +86,11 @@ h1, h2 {
 
 #cover-text {
     font-size: 130%;
-    font-family: Oswald,sans-serif;
+    font-family: Oswald, sans-serif;
     text-transform: uppercase;
     letter-spacing: 4px;
 
-    width:300px;
+    width: 300px;
     height: 200px;
 
     padding-top: 40px;
@@ -135,7 +135,7 @@ hr {
     width: 60%;
     float: right;
     line-height: 20px;
-    clear:both;
+    clear: both;
     margin-bottom: 50px;
 }
 
@@ -143,7 +143,7 @@ hr {
     width: 60%;
     float: left;
     line-height: 20px;
-    clear:both;
+    clear: both;
     margin-bottom: 50px;
 }
 
@@ -158,7 +158,7 @@ hr {
 #welcome {
     text-align: center;
     margin: 20px 0;
-    font-size: 20px;
+    font-size: 280%;
 }
 
 #circle-container {
@@ -182,7 +182,7 @@ hr {
     background-image: url('../images/dublin-city.webp');
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: cover;
+    background-position: center;
     width: 100%;
     overflow: hidden;
 }
